@@ -36,6 +36,12 @@ The code is structured into these files:
     Any code which needs the optional ocaml-csv library goes
     in here.  This implements the --csv command line option.
 
+  virt_top_calendar.ml
+
+    Any code which needs the optional ocaml-calendar library
+    goes in here.  This implements the --end-time command line
+    option.
+
   virt_top_main.ml
 
     This is just a small bit of code to glue whatever modules
